<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/titulo"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCotacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rgModo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbBrlParaBtc"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/modo_brl_btc" />

            <RadioButton
                android:id="@+id/rbBtcParaBrl"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/modo_btc_brl" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvLabelValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_valor_brl" />

        <EditText
            android:id="@+id/etValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnConverter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/converter" />

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
